--- a/qwik-app/src/components/responseDetail/responseDetail.css
+++ b/qwik-app/src/components/responseDetail/responseDetail.css
@@ -30,12 +30,13 @@ button {
   aspect-ratio: 1;
   border-style: none;
   border-radius: 0.5em;
+  /* padding: 0; */
 }
 
 img {
-  width: 100%;
+  width: 3em;
+  max-width: 100%;
+  /* max-width: 80%; */
+  /* padding: 0.5em 0; */
+  /* margin: 0 auto; */
 }
-
-/* .flex {
-  width: 100%;
-} */
