Adjust button styling

--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -322,6 +322,10 @@ button {
   justify-content: space-around;
 }
 
+.alignCenter {
+  align-items: center;
+}
+
 .alignStart {
   align-items: flex-start;
 }
