--- a/qwik-app/src/components/responseDetail/responseDetail.css
+++ b/qwik-app/src/components/responseDetail/responseDetail.css
@@ -35,7 +35,9 @@ button {
 
 img {
   width: 3em;
-  max-width: 100%;
+  padding: 0;
+  margin: 0;
+  /* max-width: 100%; */
   /* max-width: 80%; */
   /* padding: 0.5em 0; */
   /* margin: 0 auto; */
