Adjust notice sizing

--- a/qwik-app/src/routes/poqd/poqd.css
+++ b/qwik-app/src/routes/poqd/poqd.css
@@ -15,3 +15,11 @@ ol {
 td {
   border: 0.5em solid transparent;
 }
+
+.noticeTop {
+  margin-bottom: 0.2em;
+}
+
+.noticeBottom {
+  margin-top: 0.2em;
+}
