--- a/src/global.css
+++ b/src/global.css
@@ -128,6 +128,10 @@ li {
   vertical-align: baseline;
 }
 
+.link {
+  text-shadow: #bbd3ff45 0 0.06em 0.25em, #bbd3ff2b 0 0.06em 0.4em;
+}
+
 button {
   font-family: inherit;
   font-size: 100%;
