--- a/src/components/hamburger/hamburger.css
+++ b/src/components/hamburger/hamburger.css
@@ -8,9 +8,11 @@
 .lazyalign {
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap-reverse;
+  gap: 0.4em;
 
   /* overflow: auto; */
-  /* max-height: 100%; */
+  max-height: 80vh;
 }
 
 img {
@@ -24,7 +26,20 @@ img {
   width: 2.34em;
   padding: 0.5em;
   aspect-ratio: 1;
-  margin: 0.35em -0.5em 0 0.5em;
+  /* margin: 0.35em -0.5em 0 0.5em; */
+  margin-left: 0.5em;
+}
+
+@media (max-width: 1000px) {
+  img {
+    margin: 0;
+  }
+
+  .lazyalign {
+    position: absolute;
+    top: 0.8em;
+    right: 2em;
+  }
 }
 
 li {
