--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -21,7 +21,20 @@ img {
     0 0em 2.5em 0 rgba(1, 89, 125, 0.412);
   width: 3.34em;
   aspect-ratio: 1;
-  margin: 0.35em 0.5em 0.5em -0.5em;
+  /* margin: 0.35em 0.5em 0.5em -0.5em; */
+  margin-right: 0.5em;
+}
+
+@media (max-width: 1000px) {
+  img {
+    margin: 0;
+    margin-left: -0.8em;
+  }
+  .lazyalign {
+    position: absolute;
+    top: 0.8em;
+    left: 2em;
+  }
 }
 
 li {
