--- a/src/routes/tech/wasm/wasm.css
+++ b/src/routes/tech/wasm/wasm.css
@@ -2,9 +2,13 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--kaBeech-screen-insert);
+  max-width: 55%;
+  padding: 1.5em;
+  border-radius: 1.5em;
 }
 
 li {
   margin: 1em;
-  max-width: 50%;
+  /* max-width: 50%; */
 }
