--- a/src/components/beechy/beechy.css
+++ b/src/components/beechy/beechy.css
@@ -1,11 +1,15 @@
 img {
   width: 7em;
   max-width: 100%;
+  height: 4em;
+  max-height: 100%;
   /* flex: 1 1 0; */
 }
 
 .mobileShow {
   width: 7em;
   max-width: 10%;
+  height: 4em;
+  max-height: 10%;
   /* flex: 1 1 0; */
 }
