--- a/src/components/hamburger/hamburger.css
+++ b/src/components/hamburger/hamburger.css
@@ -42,6 +42,7 @@ img {
   /* margin: 0.35em -0.5em 0 0.5em; */
   /* margin-left: 0.5em; */
   width: 8em;
+  aspect-ratio: 1;
 }
 
 @media (max-width: 1000px) {
