--- a/src/components/beechy/beechy.css
+++ b/src/components/beechy/beechy.css
@@ -1,15 +1,13 @@
 img {
   width: 7em;
   max-width: 100%;
-  height: 4em;
-  max-height: 100%;
+  aspect-ratio: 1.75;
   /* flex: 1 1 0; */
 }
 
 .mobileShow {
   width: 7em;
   max-width: 10%;
-  height: 4em;
-  max-height: 10%;
+  aspect-ratio: 1.75;
   /* flex: 1 1 0; */
 }
