Add label to a11y tree

--- a/src/routes/fun/flower/flower.css
+++ b/src/routes/fun/flower/flower.css
@@ -18,10 +18,11 @@
 }
 
 label {
-  display: none;
+  visibility: collapse;
   align-self: center;
   /* position: relative;
   z-index: 1; */
+  height: 0;
 }
 
 input {
