Make hamburger options display below hamburger

--- a/src/components/hamburger/hamburger.css
+++ b/src/components/hamburger/hamburger.css
@@ -8,7 +8,7 @@
 .lazyalign {
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap-reverse;
+  /* flex-wrap: wrap-reverse; */
   gap: 0.4em;
 
   /* overflow: auto; */
