Bring hamburger options to front

--- a/src/components/hamburger/hamburger.css
+++ b/src/components/hamburger/hamburger.css
@@ -73,6 +73,7 @@ img {
   border-color: var(--kaBeech-main-background);
   border-width: 0.15em;
   /* width: fit-content; */
+  z-index: 900;
 }
 
 li {
