--- a/src/global.css
+++ b/src/global.css
@@ -142,6 +142,11 @@ li {
   text-shadow: #cfffbb45 0 0.06em 0.25em, #cfffbb2b 0 0.06em 0.4em;
 }
 
+.link:hover {
+  text-decoration: underline;
+  text-shadow: #cfffbb2e 0 0.06em 0.125em, #cfffbb25 0 0.06em 0.2em;
+}
+
 button {
   font-family: inherit;
   font-size: 100%;
