--- a/src/global.css
+++ b/src/global.css
@@ -565,3 +565,20 @@ h3.homepage {
   overflow-wrap: break-word;
   white-space: pre-wrap;
 }
+
+.blinkOut {
+  display: none;
+}
+
+.hamburgerChoice:hover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .blinkOut {
+    font-size: 0.9em;
+    display: block;
+    text-align: center;
+    max-width: 4em;
+    margin: 0.5em 0 0.2em 0.5em;
+  }
+}
