--- a/src/routes/fun/star-crossed/star-crossed.css
+++ b/src/routes/fun/star-crossed/star-crossed.css
@@ -1,3 +1,15 @@
+.xkcd {
+  margin: 1em 0 1em 0;
+}
+
+.logo {
+  margin: 1em;
+}
+
+h1.title {
+  margin: 1em 0 0.5em 0;
+}
+
 input {
   overflow: visible;
   background-color: rgba(165, 42, 42, 0);
@@ -5,6 +17,7 @@ input {
   font-size: 1.5rem;
   color: var(--kaBeech-screen-foreground);
 }
+
 @media (max-width: 520px) {
   input {
     font-size: 1rem;
@@ -22,9 +35,6 @@ input {
   height: 24em;
 }
 
-::-webkit-datetime-edit-year-field {
-  /* display: none; */
-}
 ::-webkit-inner-spin-button {
   display: none;
 }
