--- a/src/routes/fun/star-crossed/star-crossed.css
+++ b/src/routes/fun/star-crossed/star-crossed.css
@@ -10,10 +10,20 @@ h1.title {
   margin: 1em 0 0.5em 0;
 }
 
+/* img {
+  max-width: 90%;
+}
+
+#staticPhoto {
+  aspect-ratio: 1;
+} */
+
 input {
   overflow: visible;
   background-color: rgba(165, 42, 42, 0);
-  border-style: none;
+  border-style: solid;
+  border-color: var(--kaBeech-screen-foreground);
+  border-radius: 0.2em;
   font-size: 1.5rem;
   color: var(--kaBeech-screen-foreground);
 }
