--- a/src/routes/fun/star-crossed/star-crossed.css
+++ b/src/routes/fun/star-crossed/star-crossed.css
@@ -10,13 +10,16 @@ h1.title {
   margin: 1em 0 0.5em 0;
 }
 
-/* img {
-  max-width: 90%;
+iframe,
+.iframePlaceholder {
+  width: 90%;
+  height: 40rem;
 }
 
 #staticPhoto {
-  aspect-ratio: 1;
-} */
+  max-width: 90%;
+  flex: 1;
+}
 
 input {
   overflow: visible;
@@ -28,21 +31,38 @@ input {
   color: var(--kaBeech-screen-foreground);
 }
 
+@media (max-width: 1400px) {
+  iframe,
+  .iframePlaceholder {
+    height: 24rem;
+  }
+}
+
+@media (max-width: 800px) {
+  iframe,
+  .iframePlaceholder {
+    height: 24rem;
+  }
+}
+
 @media (max-width: 520px) {
-  input {
+  input,
+  .iframePlaceholder {
     font-size: 1rem;
+  }
+  iframe {
+    height: 18rem;
   }
 }
 
 @media (max-width: 346px) {
-  input {
+  input,
+  .iframePlaceholder {
     font-size: 0.7rem;
   }
-}
-
-.iframePlaceholder {
-  width: 90%;
-  height: 24em;
+  iframe {
+    height: 8rem;
+  }
 }
 
 ::-webkit-inner-spin-button {
