--- a/src/global.css
+++ b/src/global.css
@@ -111,8 +111,18 @@ body {
   font-size: 100%;
   font-size: 1.5rem;
   background-color: var(--kaBeech-main-background);
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+  font-family:
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
     sans-serif;
   margin: 0;
   padding: 0;
@@ -157,12 +167,16 @@ li {
 }
 
 .link {
-  text-shadow: #cfffbb45 0 0.06em 0.25em, #cfffbb2b 0 0.06em 0.4em;
+  text-shadow:
+    #cfffbb45 0 0.06em 0.25em,
+    #cfffbb2b 0 0.06em 0.4em;
 }
 
 .link:hover {
   text-decoration: underline;
-  text-shadow: #cfffbb2e 0 0.06em 0.125em, #cfffbb25 0 0.06em 0.2em;
+  text-shadow:
+    #cfffbb2e 0 0.06em 0.125em,
+    #cfffbb25 0 0.06em 0.2em;
 }
 
 button {
@@ -582,7 +596,7 @@ select {
   /* display: flex; */
   flex-direction: column;
   /* align-self: stretch; */
-  overflow: auto;
+  /* overflow: auto; */
   flex: 1 1 auto;
   /* height: 0; */
   /* justify-content: space-between; */
